refactor(backend): mover 34 queries de service a repository (@Query / JdbcClient)
- rh/NominaService: 5 jdbc → EmpleadoRepository (findActivosConSueldo
  via JdbcClient) + EmpleadoGateway (existsAndActivo, resumenById,
  resumenByIds) + NominaRepository (findEmpleadoIdsByPeriodo @Query native)
- com/CompraService: 7 jdbc → CompraReportRepository nuevo
  (5 SELECTs en vistas + 1 SELECT reutilizado en abonar + 1 INSERT
  @Modifying RETURNING)
- fin/CajaService: 4 jdbc → CajaReportRepository nuevo
  (SELECT folio pago + resumen turno + cerrarTurno)
- ven/ReporteService: 10 jdbc → ReporteRepository nuevo
  (topProductos, mejoresClientes, ventasTotales, mejoresVendedores,
  ventasPorHora, mejoresDiasVenta, etc.)

Total: 34 queries movidas de service a repository. 0 JdbcTemplate
queda en */service/*. Tests: 567 pass + 1 fail pre-existente
modulosSinCiclos (ArquUnit ciclo cat<->inv, no relacionado).

Co-Authored-By: internal-model